Update kustomize patches.

--- a/k8s/overlays/development/kustomization.yaml
+++ b/k8s/overlays/development/kustomization.yaml
@@ -4,6 +4,6 @@ images:
   - name: 630637833070.dkr.ecr.ap-southeast-1.amazonaws.com/healthchecks
     newName: 970722082474.dkr.ecr.ap-southeast-1.amazonaws.com/healthchecks
 patches:
-  - configmap.yaml
-  - sealedsecrets.yaml
-  - ingress.yaml
+  - path: configmap.yaml
+  - path: sealedsecrets.yaml
+  - path: ingress.yaml
