Upgrade healthcheck version.

--- a/k8s/overlays/development/configmap.yaml
+++ b/k8s/overlays/development/configmap.yaml
@@ -5,6 +5,6 @@ metadata:
 data:
   ALLOWED_HOSTS: localhost,hc-dev.fastjobs.sg
   DB_HOST: rds-mysql-fastjobs-encrypt-dev-aurora-cluster.cluster-ca306e69kk8v.ap-southeast-1.rds.amazonaws.com
-  DB_NAME: healthchecksdev
+  DB_NAME: healthchecksdev23
   PING_ENDPOINT: https://hc-dev.fastjobs.sg/ping/
   SITE_ROOT: https://hc-dev.fastjobs.sg
