Migrate from sealed secret to onepassword and update email smtp username and password.

--- a/k8s/overlays/development/kustomization.yaml
+++ b/k8s/overlays/development/kustomization.yaml
@@ -2,5 +2,5 @@ resources:
   - ../../base
 patches:
   - path: configmap.yaml
-  - path: sealedsecrets.yaml
+  - path: onepassworditem.yaml
   - path: ingress.yaml
