--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
   - configmap.yaml
   - deployment.yaml
-  - sealedsecrets.yaml
+  - onepassworditem.yaml
   - service.yaml
   - ingress.yaml
